--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -7,6 +7,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  font-family: Poppins;
+}
+
 input[type="range"] {
   -webkit-appearance: none;
   margin-right: 15px;
