--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -40,3 +40,40 @@ input[type="range"]::-webkit-slider-runnable-track {
   border: none;
   background: #f4921b;
 }
+
+.fc-scroller {
+  @apply !scrollbar-hide;
+}
+
+.fc-today-button {
+  @apply !bg-transparent !text-gray-900 !font-medium !border-none;
+}
+
+.fc-prev-button,
+.fc-next-button {
+  @apply !bg-transparent !text-gray-900 !font-medium !border-none !p-0;
+}
+
+.fc-dayGridMonth-button,
+.fc-timeGridWeek-button,
+.fc-Liste-button {
+  @apply !bg-gray-300 !text-gray-700 !border-none !ml-1;
+}
+
+.fc-dayGridMonth-button.fc-button-active,
+.fc-timeGridWeek-button.fc-button-active,
+.fc-Liste-button.fc-button-active {
+  @apply !bg-custom-l3;
+}
+
+.fc-day-today {
+  @apply !bg-custom-l2;
+}
+
+.fc-timegrid-axis {
+  /* @apply !hidden; */
+}
+
+.fc-toolbar-title {
+  @apply !text-sm 2xl:!text-lg font-medium capitalize;
+}
