--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -11,36 +11,6 @@ body {
   font-family: Poppins;
 }
 
-input[type="range"] {
-  -webkit-appearance: none;
-  margin-right: 15px;
-  width: 200px;
-  height: 7px;
-  background: rgba(255, 255, 255, 0.6);
-  border-radius: 5px;
-  background-image: linear-gradient(#f4921b, #f4921b);
-  background-size: 70% 100%;
-  background-repeat: no-repeat;
-}
-
-input[type="range"]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  height: 20px;
-  width: 20px;
-  border-radius: 50%;
-  background: #f4921b;
-  cursor: ew-resize;
-  box-shadow: 0 0 2px 0 #555;
-  transition: background 0.3s ease-in-out;
-}
-
-input[type="range"]::-webkit-slider-runnable-track {
-  -webkit-appearance: none;
-  box-shadow: none;
-  border: none;
-  background: #f4921b;
-}
-
 .fc-scroller {
   @apply !scrollbar-hide;
 }
@@ -76,4 +46,32 @@ input[type="range"]::-webkit-slider-runnable-track {
 
 .fc-toolbar-title {
   @apply !text-sm 2xl:!text-lg font-medium capitalize;
+}
+input[type="range"] {
+  -webkit-appearance: none !important;
+  -webkit-transition: 0.3s;
+  transition: all 0.3s;
+  /* background: rgba(255, 255, 255, 0.6); */
+  background-image: linear-gradient(90deg, #f4921b 60%, #c4c4c4 60%);
+  /* background-size: 70% 100%; */
+  border-radius: 1em;
+  height: 0.5em;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 1.2em;
+  width: 1.2em;
+  border: 0.2em solid #f4921b;
+  border-radius: 50%;
+  background: #fff;
+
+  background-repeat: no-repeat;
+  cursor: pointer;
+  /* box-shadow: 0 0 2px 0 #555; */
+  transition: background 0.3s ease-in-out;
+}
+
+::-webkit-calendar-picker-indicator {
+  display: none;
 }
